--- a/src/index.css
+++ b/src/index.css
@@ -9,8 +9,6 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -19,21 +17,21 @@
   -webkit-text-size-adjust: 100%;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
 body {
   margin: 0;
   display: flex;
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  background-color: #e7e5e4;
+  color: #171717;
+}
+
+@media (prefers-color-scheme: dark) {
+  body {
+    background-color: #18181b;
+    color: #f5f5f5;
+  }
 }
 
 #root {
