Update light styles

--- a/src/index.css
+++ b/src/index.css
@@ -23,7 +23,7 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
-  background-color: #e7e5e4;
+  background-color: #eef2ff;
   color: #171717;
 }
 
