--- a/src/index.css
+++ b/src/index.css
@@ -40,6 +40,23 @@ a:active {
   color: #0284c7;
 }
 
+@layer utilities {
+  .button {
+    padding: 0.25rem 0.5rem;
+    background-color: #3b82f6;
+    border: 1px solid #3b82f6;
+    border-radius: 0.375rem;
+    color: #fff;
+  }
+
+  @media (prefers-color-scheme: dark) {
+    .button {
+      background-color: #4338ca;
+      border-color: #4338ca;
+    }
+  }
+}
+
 @media (prefers-color-scheme: dark) {
   body {
     background-color: #18181b;
